tests/functional/python_tests/fork_tests/iptables_backup.conf
# apply rules: sudo iptables-restore < iptables_backup.conf
# clear rules: sudo iptables -F INPUT
# Generated by iptables-save v1.6.1 on Thu Mar 11 08:55:08 2021
*filter
:INPUT ACCEPT [100:9218]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [536:46353]
-A INPUT -p tcp -m tcp --sport 3902:3904 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 4902:4904 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4902:4904 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3902:3904 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 3000:3999 --dport 3000:3999 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 4000:4999 --dport 4000:4999 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4000:4999 -j DROP
-A INPUT -p tcp -m tcp --dport 3000:3999 -j DROP
COMMIT
# Completed on Thu Mar 11 08:55:08 2021
